2008-02-24  Kevin Ballard <kballard@gmail.com>

	Added HTML4 color names support for YAML themes.

2008-02-24  Satoshi Nakagawa <artension@gmail.com>

	rgba() should allow /.\d/ for alpha values.

2008-02-24  Satoshi Nakagawa <artension@gmail.com>

	Enabled continuous spell checking by default.

2008-02-24  Kevin Ballard <kballard@gmail.com>

	Changed to allow rgb() and rgba() strings in YAML theme files.

==== LimeChat 0.16.2 ====

2008-02-15  Satoshi Nakagawa <artension@gmail.com>

	Fixed a method not found bug while formatting '%@'.

2008-02-15  Satoshi Nakagawa <artension@gmail.com>

	Changed title of welcome dialog.

2008-02-15  Satoshi Nakagawa <artension@gmail.com>

	Changed to hide the main window for the first start up.

2008-02-15  Satoshi Nakagawa <artension@gmail.com>

	Added welcome dialog.

2008-02-11  Satoshi Nakagawa <artension@gmail.com>

	Changed to keep selection when a log view become inactive.

2008-02-10  Satoshi Nakagawa <artension@gmail.com>

	Completed +q/+a channel modes support for Unreal IRCd.

==== LimeChat 0.16.1 ====

2008-02-09  Satoshi Nakagawa <artension@gmail.com>

	Changed to take care of +q/+a user modes and '~'/'&' prefixes.

2008-02-09  Satoshi Nakagawa <artension@gmail.com>

	Added an option, don't show notifications when the application is active.

2008-02-09  Satoshi Nakagawa <artension@gmail.com>

	Added /query support.

2008-02-05  Satoshi Nakagawa <artension@gmail.com>

	Prohibit adding a member when received join in a mode +a channel.

2008-02-05  Satoshi Nakagawa <artension@gmail.com>

	Changed to clear member list when received mode +a.
	Changed to rebuild member list when received mode -a.

2008-02-05  Satoshi Nakagawa <artension@gmail.com>

	Added note for the encoding setting.

==== LimeChat 0.16 ====

2008-02-03  Satoshi Nakagawa <artension@gmail.com>

	Fixed a number format bug, "0.format_size" caused an exception.

==== LimeChat 0.15.1 ====

2008-02-02  Satoshi Nakagawa <artension@gmail.com>
